--- a/templates/nginx.tmpl
+++ b/templates/nginx.tmpl
@@ -19,6 +19,15 @@ upstream {{ $host }} {
 		   server {{ $address.IP }}:{{ $address.Port }};
 		{{ end }}
 
+	{{/* If a VIRTUAL_NETWORK is specified use use its IP */}}
+	{{ else if $value.Env.VIRTUAL_NETWORK }}
+		{{ range $i, $network := $value.Networks }}
+		   {{ if eq $network.Name $value.Env.VIRTUAL_NETWORK }}
+		   # Network: {{$network.Name}}
+		   server {{ $network.IP }}:{{ $value.Env.VIRTUAL_PORT }};
+		   {{ end }}
+		{{ end }}
+
 	{{/* If more than one port exposed, use the one matching VIRTUAL_PORT env var */}}
 	{{ else if $value.Env.VIRTUAL_PORT }}
 		{{ range $i, $address := $value.Addresses }}
